[package]
name = "fu740-pac"
version = "0.1.0"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for FU740 SoC"
keywords = ["no-std", "riscv", "register", "peripheral"]
license = "ISC"
edition = "2018"

[dependencies]
bare-metal = "1.0.0"
riscv = "0.6.0"
riscv-rt = { version = "0.8.0", optional = true }
vcell = "0.1.3"

[features]
rt = ["riscv-rt"]
